# vscode-wasm

./: .CodeQL.yml  .eslintrc.base.json  .gitignore  .gitmodules  .tsconfigrc.js  README.md  azure-pipelines.yml  eslint.base.config.mjs  eslint.config.mjs  ideas.ts  package-lock.json  package.json  ral.d.ts  scratch.nnb  tsconfig.base.json  tsconfig.json  tsconfig.watch.json
configs/: serve.json
docs/: cross-ide-standardization.md  emscripten.md  matplotlib.md  nativeModule.md
preview2/: .eslintrc.json
rust-api/: .eslintignore  .eslintrc.json  eslint.config.mjs  package.json  tsconfig.json  tsconfig.publish.json
sync-api/: package-lock.json  package.json
sync-api-client/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.publish.json  tsconfig.watch.json
sync-api-common/: .eslintrc.json  .npmignore  README.md  browser.d.ts  browser.js  eslint.config.mjs  node.d.ts  node.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.watch.json
sync-api-node-tests/: extension.js  package-lock.json  package.json  tsconfig.base.json
sync-api-service/: README.md  ThirdPartyNotices.txt  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.publish.json  tsconfig.watch.json
sync-api-tests/: extension.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.publish.json  tsconfig.watch.json
testbeds/: .eslintignore  .eslintrc.json  (+5 more)
testbeds/component-model-vscode-2/: Cargo.toml  package-lock.json  package.json
testbeds/component-model-vscode-2/src/: extension.ts  lib.rs
(+1000 files in other folders)
