[package]
name = "vscode_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
vscode = { path = "../../rust-api/rust" }
once_cell = "1.19.0"
wit-bindgen = "0.21.0"
wasm-bindgen = "0.2"
lazy_static = "1.4.0"